<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitePrimary"
    tools:context=".Transferencias.RecibirDineroActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_recibir_dinero"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:navigationIcon="@drawable/ic_flecha"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/whitePrimary"
        app:title=" "
        android:elevation="5dp"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBluePrimary"
            android:text="@string/str_recibir_transferencia"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txt_leyenda_recibir_dinero"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_recibir_dinero"
        android:layout_marginTop="30dp"
        android:text="@string/str_leyenda_recibir_dinero"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/colorBluePrimary"
        android:fontFamily="@font/helveticaneue"
        android:lines="3"

        />

    <include
        android:id="@+id/card_recibir_dinero"
        layout="@layout/item_tarjeta_recibir_dinero"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_leyenda_recibir_dinero"
        android:layout_marginTop="70dp"

        />

    <Button
        android:id="@+id/btn_compartir_datos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/str_compartir_datos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/margin_side"
        android:layout_marginRight="@dimen/margin_side"
        android:onClick="onClickCompartirDatos"
        app:layout_constraintBottom_toTopOf="@+id/txt_cancelar_envio"
        android:layout_marginBottom="@dimen/margin_top_cancelar"
        style="@style/PrimaryAcionButton"
        />


    <TextView
        android:id="@+id/txt_cancelar_envio"
        style="@style/TextCancelar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:onClick="onClickCancelarRecibirDinero"
        android:text="@string/str_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>